[package]
name = "weggli-enhance"
version = "0.4.1"
authors = ["LordCasser"]
edition = "2021"
license = "Apache-2.0"
description = "weggli is a fast and robust semantic search tool for C and C++ codebases. It is designed to help security researchers identify interesting functionality in large codebases."

[[bin]]
name = "weggli-enhance"

[dependencies]
tree-sitter = "0.20.10"
tree-sitter-c = "0.20.6"
log = "0.4.17"
clap = "2.34.0"
walkdir = "2.3.2"
rayon = "1.5.3"
colored = "2.0.0"
simplelog = "0.12.0"
fancy-regex = "0.13.0"
rustc-hash = "1.1.0"
thread_local = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde-sarif = "0.4.2"
serde_json = "1.0.107"



[target.'cfg(target_family = "unix")'.dependencies]
nix = "0.25.0"

[build-dependencies]
cc = "1.0.73"

[dev-dependencies]
criterion = {version = "0.3",features = ["html_reports"]}
assert_cmd = "2.0.0"
predicates = "1"
